--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav id="navv">
             <div id="logo">
-                <a href="index.html"><img src="/img/logo.png" alt="" id="logoimg"></a>
+                <a href="index.html"><img src="img/logo.png" alt="" id="logoimg"></a>
             </div>
 
             <ul id="links">
@@ -96,7 +96,7 @@
 <footer id="footer">
   <div class="footer-contenido">
     <div class="footer-logo">
-      <img src="/img/logo-removebg-preview.png" alt="Logo Alma Kai">
+      <img src="img/logo-removebg-preview.png" alt="Logo Alma Kai">
       <h3>Alma Kai</h3>
     </div>
 
@@ -109,4 +109,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
 </html>
