--- a/carrito.html
+++ b/carrito.html
@@ -12,7 +12,7 @@
     <header>
     <nav id="navv">
       <div id="logo">
-        <a href="index.html"><img src="/img/logo.png" alt="" id="logoimg"></a>
+        <a href="index.html"><img src="img/logo.png" alt="" id="logoimg"></a>
       </div>
 
       <ul id="links">
@@ -94,7 +94,7 @@
 <footer id="footer">
   <div class="footer-contenido">
     <div class="footer-logo">
-      <img src="/img/logo-removebg-preview.png" alt="Logo Alma Kai">
+      <img src="img/logo-removebg-preview.png" alt="Logo Alma Kai">
       <h3>Alma Kai</h3>
     </div>
 
@@ -104,4 +104,5 @@
   </div>
 </footer>
 </body>
+
 </html>
