--- a/cera.html
+++ b/cera.html
@@ -12,7 +12,7 @@
   <header>
     <nav id="navv">
       <div id="logo">
-        <a href="index.html"><img src="/img/logo.png" alt="" id="logoimg"></a>
+        <a href="index.html"><img src="img/logo.png" alt="" id="logoimg"></a>
       </div>
 
       <ul id="links">
@@ -90,7 +90,7 @@
 <footer id="footer">
   <div class="footer-contenido">
     <div class="footer-logo">
-      <img src="/img/logo-removebg-preview.png" alt="Logo Alma Kai">
+      <img src="img/logo-removebg-preview.png" alt="Logo Alma Kai">
       <h3>Alma Kai</h3>
     </div>
 
@@ -101,4 +101,5 @@
 </footer>
 
 </body>
+
 </html>
