--- a/img1.html
+++ b/img1.html
@@ -12,7 +12,7 @@
     <header>
     <nav id="navv">
       <div id="logo">
-        <a href="index.html"><img src="/img/logo.png" alt="" id="logoimg"></a>
+        <a href="index.html"><img src="img/logo.png" alt="" id="logoimg"></a>
       </div>
 
       <ul id="links">
@@ -125,4 +125,5 @@
 </footer>
 
 </body>
+
 </html>
